[package]
name = "utctimestamp"
version = "0.1.4"
authors = ["Joel Höner <athre0z@zyantific.com>"]
edition = "2018"
repository = "https://github.com/athre0z/utctimestamp"
description = "Simple & fast 64 bit UTC time types"
license = "MIT OR Apache-2.0"

[dependencies]
chrono = "0.4"

[dependencies.serde]
version = "1.0"
optional = true
features = ["derive"]

[features]
default = []
serde-support = ["serde"]
